src/objects/Evaluation_Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <picklist>
            <picklistValues>
                <fullName>Hatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wagon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Cab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <picklist>
            <picklistValues>
                <fullName>Black</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ivory Pearl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must select a dealer</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Evaluation Vehicles</relationshipLabel>
        <relationshipName>Dealer_Evaluation_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drive__c</fullName>
        <label>Drive</label>
        <picklist>
            <picklistValues>
                <fullName>2WD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4WD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FMO</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must select an FMO</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>FMO Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FMO Evaluation Vehicles</relationshipLabel>
        <relationshipName>FMO_Evaluation_Vehicle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ST-L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ti-L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ti-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kilometers_almost_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kilometers almost up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kms__c</fullName>
        <label>Kms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Duration__c</fullName>
        <description>Field use for reporting</description>
        <formula>IF(  ISBLANK(Live_End_date__c) ,  TODAY() -Live_Start_date__c, Live_End_date__c - Live_Start_date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Live Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_End_date__c</fullName>
        <label>Live End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Live_Start_date__c</fullName>
        <label>Live Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Long Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>Model__c + &quot; - &quot; + Vehicle__r.Name</formula>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Vehicle__r.Model_Series__c</formula>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Off_Date__c</fullName>
        <label>Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Date__c</fullName>
        <label>On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Evaluation Vehicles</relationshipLabel>
        <relationshipName>Evaluation_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Launch Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Agreement to provide vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Customer Evaluation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Initials__c</fullName>
        <formula>IF(TEXT(Region__c) = &apos;Head Office&apos;,
   &apos;HO&apos;,
   IF(TEXT(Region__c) = &apos;Southern&apos;,
      &apos;SR&apos;,
      IF(TEXT(Region__c) = &apos;Northern&apos;,
         &apos;NR&apos;,
         IF(TEXT(Region__c) = &apos;Eastern&apos;,
            &apos;ER&apos;,
            &apos;WR&apos;))))</formula>
        <label>Region Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Head Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rego_Expiring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rego Expiring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rego_Expiry__c</fullName>
        <label>Rego Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Returned_Date__c</fullName>
        <label>Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUO__c</fullName>
        <label>SUO</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spare_key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spare key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spare_key_location__c</fullName>
        <label>Spare key location</label>
        <picklist>
            <picklistValues>
                <fullName>Head Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be grounded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grounded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ordered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TECH_Model__c</fullName>
        <label>TECH_Model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Booking_Utilisation__c</fullName>
        <label>Total Booking Utilisation</label>
        <summarizedField>Evaluation_Booking__c.Booking_Duration__c</summarizedField>
        <summaryForeignKey>Evaluation_Booking__c.Evaluation_Vehicle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trans_Initials__c</fullName>
        <formula>IF(Trans__c = &apos;Automatic&apos;,
   &apos;A&apos;,
   IF(Trans__c = &apos;Manual&apos;,
      &apos;M&apos;,
      IF(Trans__c = &apos;CVT Auto&apos;,
         &apos;CVT&apos;,
         &apos;&apos;)))</formula>
        <label>Trans Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trans__c</fullName>
        <formula>TEXT( Vehicle__r.Transmission__c )</formula>
        <label>Trans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilisation__c</fullName>
        <formula>Total_Booking_Utilisation__c /  Live_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilisation</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <formula>Vehicle__r.ProductCode</formula>
        <label>Variant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Registration__c</fullName>
        <label>Vehicle Registration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select vehicles with SFDC Product Level 1</errorMessage>
            <filterItems>
                <field>Product2.SFDC_Product_Level__c</field>
                <operation>equals</operation>
                <value>1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Evaluation Vehicles</relationshipLabel>
        <relationshipName>Evaluation_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Evaluation Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vehicle__c</columns>
        <columns>Status__c</columns>
        <columns>Body__c</columns>
        <columns>Colour__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EV-{0000}</displayFormat>
        <label>Evaluation Vehicle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>